# cmakeproj

./: Cargo.toml  README.md
src/: init.rs  main.rs  new.rs
src/project/: build.rs  init.rs  mod.rs  new.rs  run.rs  setup.rs
templates/: CMakeLists.txt
